@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.99.00
 
+              pamdice: Fix incorrect output file name with PAM input.  Always
+              broken (pamdice was new in Netpbm 9.25 (March 2002).
+
               libnetpbm: Stop bogus runtime error check failure in pmfileio.c
               shifts.
 
